--- a/client/.gitignore
+++ b/client/.gitignore
@@ -7,10 +7,14 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
+# Dependencies & Build
 node_modules
 dist
 dist-ssr
 *.local
+
+# Environment Variables
+.env
 
 # Editor directories and files
 .vscode/*
@@ -22,4 +26,3 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
-*.env
